--- a/Day2/table.html
+++ b/Day2/table.html
@@ -13,7 +13,7 @@
 
         <tr>
           <th>Name</th>
-          <th>Age</th>
+          <th>Ages</th>
           <th>Occupation</th>
         </tr>
         <tr>
